# jsonguard

./: Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml
docs/: validation.md
docs/plans/: 2026-05-21-input-inspection-design.md  2026-05-21-input-inspection.md  2026-05-21-jsonguard-v0.1.md
docs/privacy/: index.html
docs/terms/: index.html
src/: guard_input.rs  inspect.rs  lib.rs  text.rs  types.rs
tests/: real_world_samples.rs
tests/corpus/: bidi_samples.txt  formula_injection.csv
